--- a/server/views/pages/log-application/confirm/partials/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/confirm/partials/swap-visiting-orders-for-pin-credit.njk
@@ -5,7 +5,7 @@
   rows: [
     {
       key: { text: "Details" },
-      value: { text: applicationData.additionalData.details },
+      value: { text: applicationData.request.details },
       actions: [{ href: "#", text: "Change", visuallyHiddenText: "details" }]
     }
   ]
