--- a/server/views/pages/applications/forward/index.njk
+++ b/server/views/pages/applications/forward/index.njk
@@ -1,3 +1,4 @@
+{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/character-count/macro.njk" import govukCharacterCount %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
@@ -9,16 +10,19 @@
 {% set mainClasses = "app-container govuk-body applications-landing-page" %}
 
 {% block content %}
-  <div class="govuk-body govuk-width-container govuk-!-padding-top-5 govuk-!-padding-bottom-5">
+  <div class="govuk-body govuk-width-container">
+    {{ govukBackLink({
+      text: "Back",
+      href: "/applications/"+ application.requestedBy.username + "/" + application.id 
+    }) }}
+
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half">
-        <h1 class="govuk-heading-xl govuk-!-margin-top-0">{{ title }}</h1>
-
         {% if errors %}
           {% set errorList = [] %}
 
           {% if errors.forwardTo %}
-            {% set errorList = errorList.concat([{ text: errors.forwardToDepartment.text, href: "#forwardTo" }]) %}
+            {% set errorList = errorList.concat([{ text: errors.forwardTo.text, href: "#forwardTo" }]) %}
           {% endif %}
 
           {% if errors.forwardingReason %}
@@ -31,19 +35,26 @@
           }) }}
         {% endif %}
 
+        <span class="govuk-caption-xl">{{ applicationType.name }}</span>
 
         <form method="POST" id="forward-application-form">
           <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
 
           {{ govukRadios({
             name: "forwardTo",
+            value: forwardTo,
             fieldset: {
               legend: {
-                text: "Send to:"
+                text: title,
+                isPageHeading: true,
+                classes: "govuk-fieldset__legend--xl"
               }
+           },
+            hint: {
+              text: "Send to:"
             },
             items: departments,
-            errorMessage: errors.forwardToDepartment
+            errorMessage: errors.forwardTo
           }) }}
 
           {{ govukCharacterCount({
@@ -53,9 +64,12 @@
             threshold: 75,
             value: textareaValue,
             label: {
-              text: "Reason for forwarding (optional)",
+              text: "Reason for forwarding this application (optional)",
               classes: "govuk-label--s",
               isPageHeading: true
+            },
+            hint: {
+              text: "This is added to the comments section for other staff to see"
             },
             errorMessage: errors.forwardingReason
           }) }}
@@ -69,3 +83,4 @@
     </div>
   </div>
 {% endblock %}
+  
