add comment errors

--- a/server/views/pages/applications/comments/index.njk
+++ b/server/views/pages/applications/comments/index.njk
@@ -1,5 +1,6 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/character-count/macro.njk" import govukCharacterCount %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% extends "../../../partials/layout.njk" %}
 
@@ -8,8 +9,21 @@
 
 {% block content %}
   <div class="govuk-body govuk-width-container">
-    <span class="govuk-caption-xl">Swap VOs for PIN credit</span>
-    <h1 class="govuk-heading-xl govuk-!-margin-top-0">{{ title }}</h1>
+    {% if errors %}
+      {% set errorList = [] %}
+
+      {% if errors.comment %}
+        {% set errorList = errorList.concat([{ text: errors.comment.text, href: "#comment" }]) %}
+      {% endif %}
+
+      {{ govukErrorSummary({
+        titleText: "There is a problem",
+        errorList: errorList
+      }) }}
+    {% endif %}
+
+    <span class="govuk-caption-xl">{{ title }}</span>
+    <h1 class="govuk-heading-xl govuk-!-margin-top-0">Comments</h1>
 
     {% set activeTab = 'comments' %}
     {% include "../partials/sub-navigation.njk" %}
@@ -38,11 +52,11 @@
           <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
 
           {{ govukCharacterCount({
-            name: "appComment",
-            id: "app-comment",
+            name: "comment",
+            id: "comment",
             maxlength: 1000,
             threshold: 75,
-            value: "",
+            value: comment,
             label: {
               text: "Add a comment",
               classes: "govuk-label--s govuk-!-margin-bottom-4",
