Fixing From column name display on  view apps page

--- a/assets/scss/views/_applications.scss
+++ b/assets/scss/views/_applications.scss
@@ -58,3 +58,9 @@
   justify-content: space-between;
   border-bottom: 1px solid $govuk-border-colour;
 }
+
+.govuk-table__subtext {
+  display: block;
+  margin-bottom: 0;
+  color: $govuk-secondary-text-colour;
+}
