--- a/server/views/pages/log-application/application-details/partials/add-emergency-pin-phone-credit.njk
+++ b/server/views/pages/log-application/application-details/partials/add-emergency-pin-phone-credit.njk
@@ -14,7 +14,7 @@
     text: "Use only multiples of £1, with a limit of £5"
   },
   inputmode: "numeric",
-  value: amount,
+  value: formValues.amount,
   errorMessage: errors.Amount
 }) }}
 
@@ -23,7 +23,7 @@
   id: "reason",
   maxlength: 1000,
   threshold: 75,
-  value: reason,
+  value: formValues.reason,
   label: {
     text: "Reason",
     classes: "govuk-label--s"
