add conditional check

--- a/server/views/pages/applications/view/index.njk
+++ b/server/views/pages/applications/view/index.njk
@@ -1,5 +1,5 @@
 {%- from "govuk/components/summary-list/macro.njk" import govukSummaryList -%}
-{% from "pages/applications/view/partials/appTypeSummaryList.njk" import appTypeSummaryList %}
+{% from "pages/applications/view/partials/app-type-summary-list-header.njk" import appTypeSummaryListHeader %}
 {% extends "../../../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - " + title %}
