--- a/server/views/pages/applications/view/partials/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/applications/view/partials/swap-visiting-orders-for-pin-credit.njk
@@ -1,4 +1,4 @@
-{{ appTypeSummaryList("VOs to swap", application.requestedBy.username, application.id) }}
+{{ appTypeSummaryListHeader("VOs to swap", application.requestedBy.username, application.id, application.status) }}
 
 {{ govukSummaryList({
   rows: [
