Retaining form values on back button and tidy up - check details page

--- a/server/views/pages/applications/change/partials/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/applications/change/partials/swap-visiting-orders-for-pin-credit.njk
@@ -3,7 +3,7 @@
   id: "details",
   maxlength: 1000,
   threshold: 75,
-  value: application.requests[0].details,
+  value: application.details or application.requests[0].details,
   label: {
     text: "Details (optional)",
     classes: "govuk-label--s",
