--- a/server/views/pages/log-application/confirm/partials/app-type-summary-list-header.njk
+++ b/server/views/pages/log-application/confirm/partials/app-type-summary-list-header.njk
@@ -1,4 +1,4 @@
-{% macro appTypeSummaryList(title, isUpdate) %}
+{% macro appTypeSummaryListHeader(title, isUpdate) %}
   <div class="govuk-summary-list--header">
     <h2 class="govuk-heading-m">{{ title }}</h2>
     {% if not isUpdate %}
