--- a/server/views/pages/log-application/confirm/index.njk
+++ b/server/views/pages/log-application/confirm/index.njk
@@ -1,7 +1,7 @@
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
-{% from "pages/log-application/confirm/partials/appTypeSummaryList.njk" import appTypeSummaryList %}
+{% from "pages/log-application/confirm/partials/app-type-summary-list-header.njk" import appTypeSummaryListHeader %}
 
 {% extends "../../../partials/layout.njk" %}
 
