--- a/server/views/pages/log-application/confirm/partials/add-emergency-pin-phone-credit.njk
+++ b/server/views/pages/log-application/confirm/partials/add-emergency-pin-phone-credit.njk
@@ -1,4 +1,4 @@
-{{ appTypeSummaryList("Emergency credit to add", isUpdate) }}
+{{ appTypeSummaryListHeader("Emergency credit to add", isUpdate) }}
 
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
