--- a/server/views/pages/log-application/confirm/partials/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/confirm/partials/swap-visiting-orders-for-pin-credit.njk
@@ -1,4 +1,4 @@
-{{ appTypeSummaryList("VOs to swap", isUpdate) }}
+{{ appTypeSummaryListHeader("VOs to swap", isUpdate) }}
 
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
