--- a/server/views/pages/applications/view/partials/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/applications/view/partials/swap-visiting-orders-for-pin-credit.njk
@@ -1,4 +1,4 @@
-{{ appTypeSummaryListHeader("VOs to swap", application.requestedBy.username, application.id, application.status) }}
+{{ appTypeSummaryListHeader("VOs to swap", application.requestedBy.username, application.id, isClosed) }}
 
 {{ govukSummaryList({
   rows: [
