--- a/server/views/pages/applications/view/partials/add-emergency-pin-phone-credit.njk
+++ b/server/views/pages/applications/view/partials/add-emergency-pin-phone-credit.njk
@@ -1,4 +1,4 @@
-{{ appTypeSummaryListHeader("Emergency credit to add", application.requestedBy.username, application.id, application.status) }}
+{{ appTypeSummaryListHeader("Emergency credit to add", application.requestedBy.username, application.id, isClosed) }}
 
 {{ govukSummaryList({
   rows: [
