--- a/server/views/pages/log-application/application-details/partials/swap-visiting-orders-for-pin-credit.njk
+++ b/server/views/pages/log-application/application-details/partials/swap-visiting-orders-for-pin-credit.njk
@@ -3,7 +3,7 @@
   id: "details",
   maxlength: 1000,
   threshold: 75,
-  value: formValues.details,
+  value: details,
   label: {
     text: "Details (optional)",
     classes: "govuk-label--s",
