--- a/server/views/pages/log-application/application-details/partials/supply-list-of-pin-phone-contacts.njk
+++ b/server/views/pages/log-application/application-details/partials/supply-list-of-pin-phone-contacts.njk
@@ -1,1 +1,16 @@
-Form fields here
+{{ govukCharacterCount({
+  name: "details",
+  id: "details",
+  maxlength: 1000,
+  threshold: 75,
+  value: details,
+  label: {
+    text: "Details (optional)",
+    classes: "govuk-label--s",
+    isPageHeading: true
+  },
+  errorMessage: errors.Details,
+  hint: {
+    text: "Add a brief summary"
+  }
+}) }}
