add app type request details

--- a/server/views/pages/log-application/confirm/partials/supply-list-of-pin-phone-contacts.njk
+++ b/server/views/pages/log-application/confirm/partials/supply-list-of-pin-phone-contacts.njk
@@ -1,6 +1,11 @@
-{{ appTypeSummaryListHeader("", isUpdate) }}
+{{ appTypeSummaryListHeader("Supply contact list", isUpdate) }}
 
 {{ govukSummaryList({
   classes: "govuk-!-margin-bottom-9",
-  rows: []
+  rows: [
+    {
+      key: { text: "Details" },
+      value: { text: applicationData.request.details }
+    }
+  ]
 }) }}
